# teams-bot-poc

./: .gitignore  AGENTS.md  AGENT_UPDATE.md  ALFRED.md  CODEX-PLAN.md  DEBUG-COMMANDS.md  DEPLOY-PLAN.md  ERROR.md  GRUNT_LOG.md  HANDOFF.md  NOTES.md  OrigSpec.md  PLAN-disney-deploy.md  PLAN.md  PROD.md  README.md  STATE.md  TASK-azure-agent-deployment.md  TASK.intent-alignment.md  TASK.md  TASK_GRUNT_VALIDATION.md  TASK_PLAN.txt  TODO.md  TeamsMediaBot.sln  deploy_data.json  server_v2.py
python/: .dockerignore  Dockerfile  Dockerfile.intent  Dockerfile.streamlit  intent.py  pyproject.toml  requirements.txt  run_variant_sink.py  run_variant_ui.py  simulate_interview.py  simulation_engine.py  streamlit_ui.py  transcript_sink.py
python/batcave_platform/: __init__.py  spec_loader.py  spec_models.py
python/batcave_platform/routes/: __init__.py  base.py  (+3 more)
python/interview_agent/: __init__.py  agent.py  checklist.py  models.py  output.py  pubsub.py  session.py
python/legionmeet_platform/: __init__.py  spec_loader.py  spec_models.py
python/meeting_agent/: __init__.py  agent.py  checklist_state.py  debounce.py  events.py  identity.py  models.py  output.py  persistence.py  pubsub.py  session.py  tools.py
python/output/: int_20260201_202536_931b2b_analysis.json  int_20260201_203834_63f52b_analysis.json  int_20260201_204010_2a4243_analysis.json  int_20260201_231606_0b7da6_analysis.json
python/tests/: __init__.py  mock_data.py  test_debounce.py  test_events.py  test_intent.py  test_intervention_policy.py  test_interview.py  test_persistence.py  test_product_spec.py  test_simulation.py  test_sink.py  test_tools.py  test_variants.py
python/variants/: __init__.py  alfred.py  base.py  behavioral.py  default.py  registry.py  shared_content.py
(+145 files in other folders)
