[project]
name = "teams-bot-python"
version = "0.1.0"
description = "Python services for Alfred - transcript sink and meeting agent"
requires-python = ">=3.11"
dependencies = [
    "aiofiles>=24.1.0",
    "azure-storage-blob>=12.19.0",
    "fastapi>=0.115.0",
    "httpx>=0.28.0",
    "uvicorn[standard]>=0.32.0",
    "openai-agents>=0.0.16",
    "pydantic>=2.0.0",
    "python-dotenv>=1.2.1",
    "streamlit>=1.53.1",
    "websockets>=16.0",
]

[tool.uv]
dev-dependencies = [
    "asgi-lifespan>=2.1.0",
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
]
